Changelog for HLint

    Fix bug where qualified names did not match
    Remove dependency on SYB
    #234, allow TH top-level splices for ignore
    #110, add tests for ignoring commands
1.6.15
    Upgrade to uniplate 1.4.* (fixes performance bug)
    #192, make HLint into a fairly basic library
    Add --datadir to allow running with a different data directory
    #254, eliminate foldl/map fusion rules (which were untrue)
    Fix a few typos in the hint rules
    Upgrade to uniplate 1.3.*
    Upgrade to haskell-src-exts 1.6.*
    Add a .ghci file snippet
    #247, Fix bug matching expressions containing position info
1.6.14
    Upgrade to haskell-src-exts 1.5.*
1.6.13
    #246, redundant brackets in [(...)]
    Add fold/map fusion hints
    Don't suggest namings that are already used in the module
    #239, Add suggestions of and/or on foldl
    Add --extension flag, to find files not named .hs/.lhs
    Only activate the builtin hints when they are imported
    Fix matching bug, said "Use flip" on "\v -> f v . g"
    Suggest changing some pattern guards to view patterns
1.6.12
    Fix a bug with ignored hints being written to reports
    Upgrade to haskell-src-exts 1.3.*
    #228, suggest let instead of <- return in do statements
    #229, suggest comparing
    Qualify all non-Prelude function suggestions
    #225, Add redundant flip hint
    #226, Add ((+) x) ==> (x +)
    #223, TemplateHaskell may allow other extensions via code
    Fix incorrect suggestion on do x <- f ; g x x
    A few small additional hints (use flip, redundant id)
1.6.11
    Don't perform type eta reduction
1.6.10
    Fix bug, eta reduction on chained infix operators, i.e. x#y#z
1.6.9
    #217, don't suggest eta reduction on - or +
    Fix bug, PatternGuards under case alternatives were ignored
1.6.8
    #213, upgrade to cpphs 1.9
    Add suggestion to replace lambda with operator sections
    Fix bug, ''Name decided TemplateHaskell was unnecessary